7_type_checking/tests/invalid/struct_literal_fail.ennuyeux
struct NonEmptyList<T> {
    head: T;
    tail: int;
}

fn main() {
    let mylist = NonEmptyList<int> { };
}
